fix: shifted gradient up to make it not so harsh

--- a/app/(pages)/(index-page)/_components/Stats/Stats.module.scss
+++ b/app/(pages)/(index-page)/_components/Stats/Stats.module.scss
@@ -9,7 +9,7 @@ $mobile-breakpoint: 505px;
   align-items: center;
   justify-content: center;
 
-  background-color: $bg-color;
+  background: linear-gradient(180deg, #015270 0%, #123041 100%);
   padding-left: 10%;
   padding-right: 10%;
   overflow: hidden; 
