--- a/app/(pages)/(index-page)/event/_components/Prizes/PrizeList.module.scss
+++ b/app/(pages)/(index-page)/event/_components/Prizes/PrizeList.module.scss
@@ -1,7 +1,7 @@
 @use 'app/(pages)/_globals/mixins';
 
 .container {
-  background: linear-gradient(180deg, #015270 0%, #123041 4%, #123041 100%);
+  background-color: #123041;
   padding: 88px 176px 0 176px;
   overflow: hidden;
 
